--- a/src/main/java/com/mycompany/a3/Interfaces/CadastroUsuario.form
+++ b/src/main/java/com/mycompany/a3/Interfaces/CadastroUsuario.form
@@ -32,14 +32,14 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
                   <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="txtPassword" min="-2" pref="375" max="-2" attributes="0"/>
+                          <Component id="txtPassword" max="32767" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace min="-2" pref="221" max="-2" attributes="0"/>
                               <Component id="jButton2" max="32767" attributes="0"/>
