--- a/src/main/java/com/mycompany/a3/Interfaces/TelaInicial.form
+++ b/src/main/java/com/mycompany/a3/Interfaces/TelaInicial.form
@@ -29,6 +29,8 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="In&#xed;cio"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -62,9 +64,9 @@
                       <Component id="jButton6" pref="114" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton7" pref="100" max="32767" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton4" max="32767" attributes="0"/>
-                      <EmptySpace min="-2" pref="524" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="530" max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -75,10 +77,12 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jButton7" alignment="1" max="32767" attributes="0"/>
+                  <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                      <Component id="jButton7" alignment="3" max="32767" attributes="0"/>
+                      <Component id="jButton4" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <Component id="jButton6" alignment="1" max="32767" attributes="0"/>
                   <Component id="jButton5" alignment="1" max="32767" attributes="0"/>
-                  <Component id="jButton4" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="content" max="32767" attributes="0"/>
